[package]
name = "roguelike"
version = "0.1.0"
authors = ["Victor"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.0" }
# getrandom = { version = "0.2", features = ["js"] }
specs = "0.17.0"
specs-derive = "0.4.1"